--- a/style.css
+++ b/style.css
@@ -12,6 +12,19 @@
     max-width: 1360px;
     margin: 0 auto;
 }
+.btn{
+    color: #FFFFFF;
+    background-color: #30B868;
+    padding: 12px 16px;
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px 0px #00000065;
+}
+.btn:hover{
+    background-color: tomato;
+}
 nav{
     display: flex;
     justify-content: space-between;
@@ -34,19 +47,84 @@ nav ul li a{
     font-weight: 500;
     line-height: 152%;
 }
-nav .nav-btn button{
-    color: #FFFFFF;
-    background-color: #30B868;
-    padding: 12px 16px;
-    font-size: 16px;
-    font-weight: 600;
-    border: none;
-    border-radius: 4px;
-    box-shadow: 0px 4px 4px 0px #000000;
-}
 nav ul li:hover{
     background-color: tomato;
 }
 nav .nav-btn button:hover{
     background-color: tomato;
+}
+#banner-section{
+    max-width: 1600px;
+    margin: 0 auto;
+    background-image: url(assets/hero-bg.png);
+    background-repeat: no-repeat;
+}
+.banner{
+    padding: 115px 120px 179px 120px;
+}
+#banner-section .banner{
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 16px;
+}
+#banner-section .banner .head-btn{
+    width: 229px;
+    height: 36px;
+    padding: 8px 12px;
+    border-radius: 50px;
+    color: #30B868;
+    font-size: 16px;
+    font-weight: 500;
+    box-shadow: 0px 4px 4px 0px #00000065;
+    background-color: #FFFFFF;
+}
+#banner-section .banner .banner-title h1{
+    color: #FFFFFF;
+    text-shadow: 0px 4px 4px #00000075;
+    margin-bottom: 16px;
+}
+#banner-section .banner .banner-title p{
+    font-size: 18px;
+    line-height: 24px;
+    color: #FFFFFF;
+}
+#banner-section .banner .banner-title{
+    text-align: center;
+    margin-bottom: 16px;
+}
+#banner-section .banner .banner-title .title-col{
+    color: #30B868;
+}
+#banner-section .banner .banner-btn {
+    display: flex;
+    gap: 16px;
+}
+#banner-section .banner .banner-btn .btn-1{
+    color: #FFFFFF;
+    background-color: #30B868;
+    padding: 16px 16px;
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px 0px #00000065;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+#banner-section .banner .banner-btn .btn-2{
+    color: #FFFFFF;
+    background-color: #ffffff00;
+    padding: 16px 16px;
+    font-size: 16px;
+    font-weight: 600;
+    border: 1px solid #FFFFFF;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px 0px #00000065;
+    display: flex;
+    gap: 10px;
+    align-items: center;
 }
